--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Cloud synced TODO-list" />
-  <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script> -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script> -->
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.5.1/firebase-ui-auth.css" />
 
   <title>Todo-list</title>
